--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,6 @@
     <title>React Exam</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%;"></div>
   </body>
 </html>
