--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React Exam</title>
+    <script src="https://kit.fontawesome.com/252ab3539a.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root" style="width: 100%;"></div>
+
   </body>
 </html>
